2014-04-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c: Minor formatting.
	(SUBFILE, get_tags_of_indirect_tags_table): Move typedef
	into body of function.
	(info_get_node_of_file_buffer): Unused variable deleted.
	* info/pseudotty.c: #define _XOPEN_SOURCE instead of _GNU_SOURCE.
	* info/t/infodir/split.info-2: Syntax fixed.

2014-04-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/Makefile.am: Two new tests.
	* info/t/long-nodeline.sh, info/t/long-nodeline.drib,
	info/t/split-index.sh, info/t/split-index.drib,
	info/t/infodir/split.info, info/t/infodir/split.info-1,
	info/t/infodir/split.info-2: New files.

2014-04-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (backward_move_node_structure): Null check.

2014-04-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (adjust_nodestart): Initialize variable.

	* info/info-utils.c (info_parse_label): Skip whitespace before label.
	* info/session.c (backward_move_node_structure): Check if next or up
	is a dir file properly.
	(forward_move_node_structure, backward_move_node_structure)
	(last_node_p): Avoid assignments in conditions.

2014-04-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c:
	(main) Only output a warning in --remove operation if dir file
	not found, and exit successfully.
	(readfile, open_possibly_compressed_file): Do not exit program
	on error; pass back name of file with error and return null instead.
	(pfatal_with_name): Error message for empty file moved from
	open_possibly_compressed_file.

2014-04-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_node_of_file_buffer_tags): Use |= where intended.
	* info/nodes.c: Comments edited.

2014-04-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (init_file_buffer_tag): New function.  Conditonally set
	N_HasTagsTable and N_TagsIndirect on tag table entries.
	(get_nodes_of_info_file, get_nodes_of_tag_table): Create tag table